--- a/src/views/blocks/case.j2
+++ b/src/views/blocks/case.j2
@@ -56,28 +56,28 @@
             {% set photoCounter = 1 %}
             <div class="case__photo-wrapper">
               <picture>
-                {# <source type="image/webp" srcset="@img/case-photo-{{ photoCounter }}.webp 1x"> #}
+                <source type="image/webp" srcset="@img/case-photo-{{ photoCounter }}.webp 1x">
                 <img class="case__photo" src="@img/case-photo-{{ photoCounter }}.jpg" alt="Фотография из кейса {{ photoCounter }}">
                 {% set photoCounter = photoCounter + 1 %}
               </picture>
             </div>
             <div class="case__photo-wrapper">
               <picture>
-                {# <source type="image/webp" srcset="@img/case-photo-{{ photoCounter }}.webp 1x"> #}
+                <source type="image/webp" srcset="@img/case-photo-{{ photoCounter }}.webp 1x">
                 <img class="case__photo" src="@img/case-photo-{{ photoCounter }}.jpg" alt="Фотография из кейса {{ photoCounter }}">
                 {% set photoCounter = photoCounter + 1 %}
               </picture>
             </div>
             <div class="case__photo-wrapper">
               <picture>
-                {# <source type="image/webp" srcset="@img/case-photo-{{ photoCounter }}.webp 1x"> #}
+                <source type="image/webp" srcset="@img/case-photo-{{ photoCounter }}.webp 1x">
                 <img class="case__photo" src="@img/case-photo-{{ photoCounter }}.jpg" alt="Фотография из кейса {{ photoCounter }}">
                 {% set photoCounter = photoCounter + 1 %}
               </picture>
             </div>
             <div class="case__photo-wrapper">
               <picture>
-                {# <source type="image/webp" srcset="@img/case-photo-{{ photoCounter }}.webp 1x"> #}
+                <source type="image/webp" srcset="@img/case-photo-{{ photoCounter }}.webp 1x">
                 <img class="case__photo" src="@img/case-photo-{{ photoCounter }}.jpg" alt="Фотография из кейса {{ photoCounter }}">
                 {% set photoCounter = photoCounter + 1 %}
               </picture>
