--- a/src/views/pages/contacts.j2
+++ b/src/views/pages/contacts.j2
@@ -51,8 +51,8 @@
       <div class="contacts__map contacts__map--no-js">
         <span class="visually-hidden">Мы на карте.</span>
         <picture>
-          {# <source type="image/webp" media="(min-width: 768px)" srcset="@img/map-desktop.webp">
-          <source type="image/webp" srcset="@img/map-mobile.webp 1x"> #}
+          <source type="image/webp" media="(min-width: 768px)" srcset="@img/map-desktop.webp">
+          <source type="image/webp" srcset="@img/map-mobile.webp 1x">
           <source media="(min-width: 768px)" srcset="@img/map-desktop.png">
           <img class="contacts__map-image" src="@img/map-mobile.png" alt="">
         </picture>
