--- a/src/views/blocks/modal.j2
+++ b/src/views/blocks/modal.j2
@@ -2,7 +2,7 @@
   <div class="modal__wrapper container">
     <div class="modal__image-wrapper">
       <picture>
-        {# <source type="image/webp" srcset="@img/modal-image.webp 1x"> #}
+        <source type="image/webp" srcset="@img/modal-image.webp 1x">
         <img class="modal__image" src="@img/modal-image.jpg" alt="">
       </picture>
     </div>
