--- a/src/views/blocks/popular-articles.j2
+++ b/src/views/blocks/popular-articles.j2
@@ -20,7 +20,7 @@
               </div>
               <a class="blog-card__image-link" href="./blog-page.html">
                 <picture>
-                  {# <source type="image/webp" srcset="@img/blog-card-mini.webp 1x, @img/blog-card-mini@2x.webp 2x"> #}
+                  <source type="image/webp" srcset="@img/blog-card-mini.webp 1x, @img/blog-card-mini@2x.webp 2x">
                   <img class="blog-card__image" src="@img/blog-card-mini.jpg" srcset="@img/blog-card-mini@2x.jpg 2x" alt="">
                 </picture>
               </a>
@@ -44,7 +44,7 @@
               </div>
               <a class="blog-card__image-link" href="./blog-page.html">
                 <picture>
-                  {# <source type="image/webp" srcset="@img/blog-card-mini.webp 1x, @img/blog-card-mini@2x.webp 2x"> #}
+                  <source type="image/webp" srcset="@img/blog-card-mini.webp 1x, @img/blog-card-mini@2x.webp 2x">
                   <img class="blog-card__image" src="@img/blog-card-mini.jpg" srcset="@img/blog-card-mini@2x.jpg 2x" alt="">
                 </picture>
               </a>
@@ -68,7 +68,7 @@
               </div>
               <a class="blog-card__image-link" href="./blog-page.html">
                 <picture>
-                  {# <source type="image/webp" srcset="@img/blog-card-mini.webp 1x, @img/blog-card-mini@2x.webp 2x"> #}
+                  <source type="image/webp" srcset="@img/blog-card-mini.webp 1x, @img/blog-card-mini@2x.webp 2x">
                   <img class="blog-card__image" src="@img/blog-card-mini.jpg" srcset="@img/blog-card-mini@2x.jpg 2x" alt="">
                 </picture>
               </a>
