--- a/src/views/blocks/team.j2
+++ b/src/views/blocks/team.j2
@@ -7,8 +7,8 @@
         <li class="team__item">
           <figure class="team__photo">
             <picture>
-              {# <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x"> #}
-              {# <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x"> #}
+              <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
+              <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x">
               <source media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
               <img class="team__image" src="@img/team-photo-{{ teamMemberCounter }}-mobile.jpg" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile@2x.jpg 2x" alt="">
               {% set teamMemberCounter = teamMemberCounter + 1 %}
@@ -33,8 +33,8 @@
           </div>
           <figure class="team__photo">
             <picture>
-              {# <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x"> #}
-              {# <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x"> #}
+              <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
+              <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x">
               <source media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
               <img class="team__image" src="@img/team-photo-{{ teamMemberCounter }}-mobile.jpg" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile@2x.jpg 2x" alt="">
               {% set teamMemberCounter = teamMemberCounter + 1 %}
@@ -55,8 +55,8 @@
         <li class="team__item">
           <figure class="team__photo">
             <picture>
-              {# <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x"> #}
-              {# <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x"> #}
+              <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
+              <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x">
               <source media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
               <img class="team__image" src="@img/team-photo-{{ teamMemberCounter }}-mobile.jpg" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile@2x.jpg 2x" alt="">
               {% set teamMemberCounter = teamMemberCounter + 1 %}
@@ -76,8 +76,8 @@
         <li class="team__item">
           <figure class="team__photo">
             <picture>
-              {# <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x"> #}
-              {# <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x"> #}
+              <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
+              <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x">
               <source media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
               <img class="team__image" src="@img/team-photo-{{ teamMemberCounter }}-mobile.jpg" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile@2x.jpg 2x" alt="">
               {% set teamMemberCounter = teamMemberCounter + 1 %}
@@ -98,8 +98,8 @@
         <li class="team__item">
           <figure class="team__photo">
             <picture>
-              {# <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x"> #}
-              {# <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x"> #}
+              <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
+              <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x">
               <source media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
               <img class="team__image" src="@img/team-photo-{{ teamMemberCounter }}-mobile.jpg" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile@2x.jpg 2x" alt="">
               {% set teamMemberCounter = teamMemberCounter + 1 %}
@@ -119,8 +119,8 @@
         <li class="team__item">
           <figure class="team__photo">
             <picture>
-              {# <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x"> #}
-              {# <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x"> #}
+              <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
+              <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x">
               <source media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
               <img class="team__image" src="@img/team-photo-{{ teamMemberCounter }}-mobile.jpg" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile@2x.jpg 2x" alt="">
               {% set teamMemberCounter = teamMemberCounter + 1 %}
@@ -141,8 +141,8 @@
         <li class="team__item">
           <figure class="team__photo">
             <picture>
-              {# <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x"> #}
-              {# <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x"> #}
+              <source type="image/webp" media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.webp 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.webp 2x">
+              <source type="image/webp" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile.webp 1x, @img/team-photo-{{ teamMemberCounter }}-mobile@2x.webp 2x">
               <source media="(min-width: 768px)" srcset="@img/team-photo-{{ teamMemberCounter }}-desktop.jpg 1x, @img/team-photo-{{ teamMemberCounter }}-desktop@2x.jpg 2x">
               <img class="team__image" src="@img/team-photo-{{ teamMemberCounter }}-mobile.jpg" srcset="@img/team-photo-{{ teamMemberCounter }}-mobile@2x.jpg 2x" alt="">
               {% set teamMemberCounter = teamMemberCounter + 1 %}
