--- a/src/scss/blocks/contacts.scss
+++ b/src/scss/blocks/contacts.scss
@@ -148,16 +148,20 @@ a.contacts__item {
   display: flex;
 
   @media (max-width: $max-mobile-width) {
-    margin-top: -225px;
+    margin-top: -140px;
+    clip-path: polygon(0 100%, 100% 100%, 100% 0, 0 50px);
+    height: 400px;
   }
 
   @media (min-width: $tablet-width) {
-    margin-top: -125px;
+    margin-top: -240px;
+    clip-path: polygon(0 100%, 100% 100%, 100% 145px, 62vw 0, 0 145px);
   }
 
   @media (min-width: $desktop-width) {
     margin-top: -230px;;
     z-index: 1;
+    clip-path: polygon(0 100%, 100% 100%, 100% 175px, 62vw 0, 0 175px);
   }
 
 }
@@ -167,4 +171,19 @@ a.contacts__item {
   object-fit: cover;
   object-position: top;
   max-height: 843px;
+}
+
+.contacts__map iframe {
+  width: 100%;
+  filter: invert(1) grayscale(0.5);
+
+  @media (min-width: $tablet-width) {
+    height: 600px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
+    height: 843px;
+    filter: invert(1) grayscale(0.5);
+  }
 }
