--- a/src/views/pages/contacts.j2
+++ b/src/views/pages/contacts.j2
@@ -28,7 +28,7 @@
                 <a class="contacts__item contacts__item--mail" href="mailto:mail@info@exasystems.ru">info@exasystems.ru</a>
               </div>
               <p class="contacts__item contacts__item--time">Работаем с 9 до 18 в будни</p>
-              <p class="contacts__item contacts__item--address">Москва, ул. 50 лет Октября, дом 4, офис 104&nbsp;«А»</p>
+              <p class="contacts__item contacts__item--address">Москва, Новая Басманная ул., 23, стр. 2, офис 316</p>
             </div>
           </div>
           <div class="contacts__questions">
@@ -37,7 +37,7 @@
             <form class="contacts__form form" action="https://echo.htmlacademy.ru" method="get">
               <label class="form__label">
                 <span class="contacts__label-text form__label-text">Ваше имя</span>
-                <input class="form__field" type="text" id="client-name" name="client-name" placeholder="Введите ваше имя" required data-pristine-required-message="Обязательно к заполнению">
+                <input class="form__field" type="text" id="client-name" name="client-name" placeholder="Введите ваше имя">
               </label>
               <label class="form__label">
                 <span class="contacts__label-text form__label-text">Ваш телефон</span>
@@ -48,15 +48,9 @@
           </div>
         </div>
       </div>
-      <div class="contacts__map contacts__map--no-js">
+      <div class="contacts__map">
         <span class="visually-hidden">Мы на карте.</span>
-        <picture>
-          <source type="image/webp" media="(min-width: 768px)" srcset="@img/map-desktop.webp">
-          <source type="image/webp" srcset="@img/map-mobile.webp 1x">
-          <source media="(min-width: 768px)" srcset="@img/map-desktop.png">
-          <img class="contacts__map-image" src="@img/map-mobile.png" alt="">
-        </picture>
-        {# <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9f276236deea8bb58f3e3f66fc721b0148c095bd66658fb9940365ba05a6251e&amp;source=constructor"></iframe> #}
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ac561ee9a96e3f25b83c49ff300f715d718cceee8ef46433bf8fd89d04dc67461&amp;source=constructor" width="600" height="450" frameborder="0"></iframe>
       </div>
     </section>
 
