--- a/src/views/pages/contacts.j2
+++ b/src/views/pages/contacts.j2
@@ -50,7 +50,7 @@
       </div>
       <div class="contacts__map">
         <span class="visually-hidden">Мы на карте.</span>
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ac561ee9a96e3f25b83c49ff300f715d718cceee8ef46433bf8fd89d04dc67461&amp;source=constructor" width="600" height="450" frameborder="0"></iframe>
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ac561ee9a96e3f25b83c49ff300f715d718cceee8ef46433bf8fd89d04dc67461&amp;source=constructor" width="600" height="450" scroll=false></iframe>
       </div>
     </section>
 
