--- a/src/scss/blocks/button.scss
+++ b/src/scss/blocks/button.scss
@@ -8,7 +8,6 @@ $button-height: 47;
   background-color: $button-color;
   color: #fff;
   margin: 0;
-  padding: 0;
   border: none;
   cursor: pointer;
   font-family: inherit;
@@ -18,29 +17,11 @@ $button-height: 47;
 
   transition: all 0.3s ease;
 
-  &::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 1px;
-    width: calc($button-height / 2.5) +px;
-    transform: translateX(calc($button-height / 2.9375 ) +px);
-    transition: all 0.3s ease;
-    z-index: 1;
-
-    background-image: url("@img/button-triangle.svg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
+  clip-path: polygon(calc(100% - 15px) 0, 100% 50%, calc(100% - 15px) 100%, 0 100%, 0 0);
 
   &:hover {
     color: $button-color;
     background-color: #fff;
-    &::after {
-      background-image: url("@img/button-triangle-white.svg");
-    }
   }
   &:active {
     opacity: 0.7;
