--- a/src/scss/blocks/team.scss
+++ b/src/scss/blocks/team.scss
@@ -66,6 +66,10 @@
   flex-direction: column;
   gap: 15px;
   margin-bottom: 15px;
+
+  @media (max-width: $max-mobile-width) {
+    margin-bottom: 30px;
+  }
 }
 .team__about-item {
   position: relative;
@@ -96,17 +100,22 @@
   padding-left: 73px;
   margin-bottom: 15px;
 
+  @media (max-width: $max-mobile-width) {
+    padding-top: 30px;
+    border-top: 1px solid #ebebeb;
+  }
+
   @media (min-width: $tablet-width) {
     margin-bottom: 40px;
 
-    border-bottom: 1px solid #bbbbbc;
+    border-bottom: 1px solid #ebebeb;
   }
 
   @media (min-width: $desktop-width) {
     padding-left: 88px;
     margin-bottom: 50px;
 
-    border-bottom: 1px solid #bbbbbc;
+    border-bottom: 1px solid #ebebeb;
   }
 
   &::before {
@@ -120,6 +129,10 @@
     background-image: url("@img/insurance-icon.svg");
     background-repeat: no-repeat;
     background-position: center;
+
+    @media (max-width: $max-mobile-width) {
+      top: 30px;
+    }
   }
 }
 .team__insurance-text {
