--- a/src/views/blocks/modal.j2
+++ b/src/views/blocks/modal.j2
@@ -11,7 +11,7 @@
       <form class="modal__form form" action="https://echo.htmlacademy.ru" method="get">
         <label class="form__label">
           <span class="modal__label-text form__label-text">Ваше имя</span>
-          <input class="form__field" type="text" id="modal-client-name" name="modal-client-name" placeholder="Введите ваше имя" required data-pristine-required-message="Обязательно к заполнению">
+          <input class="form__field" type="text" id="modal-client-name" name="modal-client-name" placeholder="Введите ваше имя">
         </label>
         <label class="form__label">
           <span class="modal__label-text form__label-text">Ваш телефон</span>
