--- a/src/views/blocks/subscribe-section.j2
+++ b/src/views/blocks/subscribe-section.j2
@@ -15,7 +15,7 @@
       <form class="subscribe-section__form form" action="https://echo.htmlacademy.ru" method="get">
         <label class="form__label">
           <span class="form__label-text">Ваше имя</span>
-          <input class="form__field" type="text" id="client-name" name="client-name" placeholder="Введите ваше имя" required data-pristine-required-message="Обязательно к заполнению">
+          <input class="form__field" type="text" id="client-name" name="client-name" placeholder="Введите ваше имя">
         </label>
         <label class="form__label">
           <span class="form__label-text">Ваш e-mail</span>
