--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,6 +17,7 @@
 @import "./blocks/next-link.scss";
 @import "./blocks/show-more.scss";
 @import "./blocks/modal.scss";
+@import "./blocks/modal-image.scss";
 
 
 @import "./blocks/page.scss";
