--- a/src/views/blocks/modal-image.j2
+++ b/src/views/blocks/modal-image.j2
@@ -3,6 +3,6 @@
     <span class="visually-hidden">Закрыть окно</span>
   </button>
   <figure class="modal-image__content-wrapper">
-    <img class="modal-image__content">
+    <img class="modal-image__content" src="" alt="">
   </figure>
 </div>
