--- a/src/views/layout.j2
+++ b/src/views/layout.j2
@@ -20,6 +20,7 @@
 
   <script src="./js/burger.min.js"></script>
   <script src="./js/pristine.min.js"></script>
+  <script src="./js/choices.min.js"></script>
   <script src="./js/imask.js"></script>
   <script src="./js/modal.min.js"></script>
   <script src="./js/menu.min.js"></script>
