--- a/src/views/pages/contacts.j2
+++ b/src/views/pages/contacts.j2
@@ -41,7 +41,7 @@
               </label>
               <label class="form__label">
                 <span class="contacts__label-text form__label-text">Ваш телефон</span>
-                <input class="form__field" type="phone" id="contacts-phone" name="contacts-phone" placeholder="+7 (999) 999-99-99" required data-pristine-required-message="Обязательно к заполнению">
+                <input class="form__field" type="tel" id="contacts-phone" name="contacts-phone" placeholder="+7 (999) 999-99-99" required data-pristine-required-message="Обязательно к заполнению">
               </label>
               <button class="button form__submit-button">Получить консультацию</button>
             </form>
