--- a/src/scss/blocks/button.scss
+++ b/src/scss/blocks/button.scss
@@ -1,7 +1,7 @@
 $button-height: 47;
 .button {
   position: relative;
-  display: inline-flex;
+  display: flex;
   height: $button-height +px;
   justify-content: center;
   align-items: center;
@@ -16,14 +16,29 @@ $button-height: 47;
   max-width: 290px;
 
   transition: all 0.3s ease;
-
-  clip-path: polygon(calc(100% - 15px) 0, 100% 50%, calc(100% - 15px) 100%, 0 100%, 0 0);
+  clip-path: polygon(0 0, calc(100% - 15px) 0, 100% 50%, calc(100% - 15px) 100%, 0 100%);
 
   &:hover {
     color: $button-color;
     background-color: #fff;
   }
+  &:focus-visible {
+    outline: none;
+    background-color: $blue-color;
+    &::after {
+      content: "";
+      position: absolute;
+      top: 2px;
+      bottom: 2px;
+      left: 2px;
+      right: 2px;
+      z-index: -1;
+      clip-path: polygon(0 0, calc(100% - 15px) 0, 100% 50%, calc(100% - 15px) 100%, 0 100%);
+      background-color: $button-color;
+    }
+  }
   &:active {
     opacity: 0.7;
   }
 }
+
