--- a/src/scss/blocks/modal.scss
+++ b/src/scss/blocks/modal.scss
@@ -5,6 +5,7 @@
   display: none;
   width: 100%;
   height: 100%;
+  overflow: auto;
 
   background-color: rgba(0,0,0,0.6);
 
@@ -15,6 +16,7 @@
 }
 .modal__wrapper {
   position: relative;
+  z-index: 1;
 
   display: flex;
   flex-direction: row;
@@ -26,6 +28,7 @@
 
   background-color: #ffffff;
   border-radius: 1px;;
+  box-shadow: 5px 9px 21px rgba(48, 41, 131, 0.3);
 
   @media (min-width: $tablet-width) {
     width: 577px;
