--- a/src/views/blocks/modal.j2
+++ b/src/views/blocks/modal.j2
@@ -13,10 +13,21 @@
           <span class="modal__label-text form__label-text">Ваше имя</span>
           <input class="form__field" type="text" id="modal-client-name" name="modal-client-name" placeholder="Введите ваше имя">
         </label>
-        <label class="form__label">
-          <span class="modal__label-text form__label-text">Ваш телефон</span>
-          <input class="form__field" type="phone" id="modal-phone" name="modal-phone" placeholder="+7 (999) 999-99-99" required data-pristine-required-message="Обязательно к заполнению">
-        </label>
+        <div class="form__row">
+          <label class="form__label form__label--messengers">
+            <span class="modal__label-text form__label-text">Как с вами связаться?</span>
+            <select class="form__select" id="messengers" name="messengers">
+              <option value="Whatsup">Whatsup</option>
+              <option value="Telegram">Telegram</option>
+              <option value="Телефон">Телефон</option>
+            </select>
+          </label>
+          <label class="form__label">
+            <span class="modal__label-text form__label-text">Ваш телефон</span>
+            <input class="form__field" type="tel" id="modal-phone" name="modal-phone" placeholder="+7 (999) 999-99-99" required data-pristine-required-message="Обязательно к заполнению">
+          </label>
+        </div>
+
         <label class="form__label">
           <span class="modal__label-text form__label-text">Опишите Вашу задачу</span>
           <textarea class="modal__form-textarea form__field" name="modal-task" id="modal-task" cols="30" rows="10" placeholder="Введите текст"></textarea>
