добавил модалку картинок на страницу кейса

--- a/src/views/blocks/case.j2
+++ b/src/views/blocks/case.j2
@@ -54,34 +54,34 @@
         <div class="case__right">
           <div class="case__photos">
             {% set photoCounter = 1 %}
-            <div class="case__photo-wrapper">
+            <a class="case__photo-wrapper" href="@img/case-photo-{{ photoCounter }}-big.jpg">
               <picture>
                 <source type="image/webp" srcset="@img/case-photo-{{ photoCounter }}.webp 1x">
                 <img class="case__photo" src="@img/case-photo-{{ photoCounter }}.jpg" alt="Фотография из кейса {{ photoCounter }}">
                 {% set photoCounter = photoCounter + 1 %}
               </picture>
-            </div>
-            <div class="case__photo-wrapper">
+            </a>
+            <a class="case__photo-wrapper" href="@img/case-photo-{{ photoCounter }}-big.jpg">
               <picture>
                 <source type="image/webp" srcset="@img/case-photo-{{ photoCounter }}.webp 1x">
                 <img class="case__photo" src="@img/case-photo-{{ photoCounter }}.jpg" alt="Фотография из кейса {{ photoCounter }}">
                 {% set photoCounter = photoCounter + 1 %}
               </picture>
-            </div>
-            <div class="case__photo-wrapper">
+            </a>
+            <a class="case__photo-wrapper" href="@img/case-photo-{{ photoCounter }}-big.jpg">
               <picture>
                 <source type="image/webp" srcset="@img/case-photo-{{ photoCounter }}.webp 1x">
                 <img class="case__photo" src="@img/case-photo-{{ photoCounter }}.jpg" alt="Фотография из кейса {{ photoCounter }}">
                 {% set photoCounter = photoCounter + 1 %}
               </picture>
-            </div>
-            <div class="case__photo-wrapper">
+            </a>
+            <a class="case__photo-wrapper" href="@img/case-photo-{{ photoCounter }}-big.jpg"">
               <picture>
                 <source type="image/webp" srcset="@img/case-photo-{{ photoCounter }}.webp 1x">
                 <img class="case__photo" src="@img/case-photo-{{ photoCounter }}.jpg" alt="Фотография из кейса {{ photoCounter }}">
                 {% set photoCounter = photoCounter + 1 %}
               </picture>
-            </div>
+            </a>
           </div>
         </div>
       </div>
