--- a/src/views/pages/case-page.j2
+++ b/src/views/pages/case-page.j2
@@ -25,9 +25,14 @@
   </main>
 {% endblock content %}
 
+{% block modal %}
+  {% include "./blocks/modal-image.j2" %}
+{% endblock %}
+
 {% block js %}
   <script src="./js/macy.min.js"></script>
   <script src="./js/other-projects.min.js"></script>
   <script src="./js/subscribe-form.min.js"></script>
+  <script src="./js/modal-image.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
