поправил цвет кнопки при наведении в форме подписки

--- a/src/scss/blocks/subscribe-section.scss
+++ b/src/scss/blocks/subscribe-section.scss
@@ -92,3 +92,10 @@
     margin-left: 93px;
   }
 }
+
+.subscribe-section__form-submit-button {
+  &:hover {
+    color: $button-color;
+    background-color: $white-color;
+  }
+}
