--- a/src/views/blocks/subscribe-section.j2
+++ b/src/views/blocks/subscribe-section.j2
@@ -21,7 +21,7 @@
           <span class="form__label-text">Ваш e-mail</span>
           <input class="form__field" type="email" id="subscribe-mail" name="subscribe-mail" placeholder="E-mail" required data-pristine-required-message="Обязательно к заполнению" data-pristine-email-message="Неправильный формат e-mail">
         </label>
-        <button class="button form__submit-button">Отправить заявку</button>
+        <button class="subscribe-section__form-submit-button button form__submit-button">Отправить заявку</button>
       </form>
     </div>
   </div>
