сделал 4 карточки вендора

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -44,4 +44,5 @@
 @import "./blocks/certificates.scss";
 @import "./blocks/our-advantages.scss";
 @import "./blocks/reviews.scss";
+@import "./blocks/vendors.scss";
 
