--- a/src/views/pages/vendors.j2
+++ b/src/views/pages/vendors.j2
@@ -25,26 +25,86 @@
           <ul class="vendors__list">
             <li class="vendors__item">
               <a class="vendors__item-wrapper" href="./vendor-page.html">
-                <img class="vendors__company-logo" width="150" height="45" src="@img/postgrespro-logo.png" alt="Логотип компании PostgresPro">
+                <img class="vendors__company-logo" width="150" height="45" src="@img/postgrespro-logo.png" alt="Логотип компании PostgresPro.">
                 <p class="vendors__company-about">Российский разработчик систем управления базами данных...</p>
               </a>
             </li>
             <li class="vendors__item">
               <a class="vendors__item-wrapper" href="./vendor-page.html">
-                <img class="vendors__company-logo" width="94" height="70" src="@img/aladdin-logo.png" alt="Логотип компании Аладдин">
+                <img class="vendors__company-logo" width="94" height="70" src="@img/aladdin-logo.png" alt="Логотип компании Аладдин.">
                 <p class="vendors__company-about">Ведущий российский разработчик и поставщик средств аутентификации...</p>
               </a>
             </li>
             <li class="vendors__item">
               <a class="vendors__item-wrapper" href="./vendor-page.html">
-                <img class="vendors__company-logo" width="158" height="31" src="@img/kaspersky-logo.png" alt="Логотип компании Касперский">
+                <img class="vendors__company-logo" width="158" height="31" src="@img/kaspersky-logo.png" alt="Логотип компании Касперский.">
                 <p class="vendors__company-about">Российский поставщик антивирусных и кибербезопасных решений...</p>
               </a>
             </li>
             <li class="vendors__item">
               <a class="vendors__item-wrapper" href="./vendor-page.html">
-                <img class="vendors__company-logo" width="202" height="50" src="@img/kaspersky-os-logo.png" alt="Логотип компании Лаборатории Касперского">
+                <img class="vendors__company-logo" width="202" height="50" src="@img/kaspersky-os-logo.png" alt="Логотип компании Лаборатории Касперского.">
                 <p class="vendors__company-about">Кибериммунная операционная система «Лаборатории Касперского»...</p>
+              </a>
+            </li>
+            <li class="vendors__item">
+              <a class="vendors__item-wrapper" href="./vendor-page.html">
+                <img class="vendors__company-logo" width="140" height="65" src="@img/cyber-project.png" alt="Логотип компании Кибер протект.">
+                <p class="vendors__company-about">Безопасное и удобное решение для защиты, резервного копирования...</p>
+              </a>
+            </li>
+            <li class="vendors__item">
+              <a class="vendors__item-wrapper" href="./vendor-page.html">
+                <img class="vendors__company-logo" width="155" height="67" src="@img/astralinux.png" alt="Логотип компании Astra Linux.">
+                <p class="vendors__company-about">Российского разработчик операционных систем и средств виртуализации...</p>
+              </a>
+            </li>
+            <li class="vendors__item">
+              <a class="vendors__item-wrapper" href="./vendor-page.html">
+                <img class="vendors__company-logo" width="157" height="48" src="@img/redsoft-logo.png" alt="Логотип компании Редсофт.">
+                <p class="vendors__company-about">Российский поставщик антивирусных и кибербезопасных решений...</p>
+              </a>
+            </li>
+            <li class="vendors__item">
+              <a class="vendors__item-wrapper" href="./vendor-page.html">
+                <img class="vendors__company-logo" width="77" height="44" src="@img/iru-logo.png" alt="Логотип компании iru.">
+                <p class="vendors__company-about">Российский производитель компьютерной техники...</p>
+              </a>
+            </li>
+            <li class="vendors__item">
+              <a class="vendors__item-wrapper" href="./vendor-page.html">
+                <img class="vendors__company-logo" width="132" height="36" src="@img/rdw-computers-logo.png" alt="Логотип компании rdw computers.">
+                <p class="vendors__company-about">Сертифицированная российская компьютерная техника...</p>
+              </a>
+            </li>
+            <li class="vendors__item">
+              <a class="vendors__item-wrapper" href="./vendor-page.html">
+                <img class="vendors__company-logo" width="88" height="63" src="@img/yadro-logo.png" alt="Логотип компании yadro.">
+                <p class="vendors__company-about">Российская группа компаний, занимающаяся разработкой и выпуском вычислительной...</p>
+              </a>
+            </li>
+            <li class="vendors__item">
+              <a class="vendors__item-wrapper" href="./vendor-page.html">
+                <img class="vendors__company-logo" width="201" height="30" src="@img/butinet-logo.png" alt="Логотип компании butinet.">
+                <p class="vendors__company-about">Разработка и поставки высокопроизводительного IT-оборудования...</p>
+              </a>
+            </li>
+            <li class="vendors__item">
+              <a class="vendors__item-wrapper" href="./vendor-page.html">
+                <img class="vendors__company-logo" width="114" height="46" src="@img/rosatom-logo.png" alt="Логотип компании Т-КОМ РОСАТОМ.">
+                <p class="vendors__company-about">Российский производитель телекоммуникационного оборудования...</p>
+              </a>
+            </li>
+            <li class="vendors__item">
+              <a class="vendors__item-wrapper" href="./vendor-page.html">
+                <img class="vendors__company-logo" width="229" height="30" src="@img/isvyaz-logo.png" alt="Логотип компании Связь Инжиниринг.">
+                <p class="vendors__company-about">Российский разработчик и производитель электроники - ИБП...</p>
+              </a>
+            </li>
+            <li class="vendors__item">
+              <a class="vendors__item-wrapper" href="./vendor-page.html">
+                <img class="vendors__company-logo" width="180" height="59" src="@img/next-touch-logo.png" alt="Логотип компании NextTouch.">
+                <p class="vendors__company-about">Крупнейший производитель интерактивного оборудования в России...</p>
               </a>
             </li>
           </ul>
