--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -45,4 +45,5 @@
 @import "./blocks/our-advantages.scss";
 @import "./blocks/reviews.scss";
 @import "./blocks/vendors.scss";
+@import "./blocks/need-help.scss";
 
