--- a/src/views/blocks/modal.j2
+++ b/src/views/blocks/modal.j2
@@ -17,7 +17,7 @@
           <label class="form__label form__label--messengers">
             <span class="modal__label-text form__label-text">Как с вами связаться?</span>
             <select class="form__select" id="messengers" name="messengers">
-              <option value="Whatsup">Whatsup</option>
+              <option value="Whatsapp">Whatsapp</option>
               <option value="Telegram">Telegram</option>
               <option value="Телефон">Телефон</option>
             </select>
@@ -27,7 +27,6 @@
             <input class="form__field" type="tel" id="modal-phone" name="modal-phone" placeholder="+7 (999) 999-99-99" required data-pristine-required-message="Обязательно к заполнению">
           </label>
         </div>
-
         <label class="form__label">
           <span class="modal__label-text form__label-text">Опишите Вашу задачу</span>
           <textarea class="modal__form-textarea form__field" name="modal-task" id="modal-task" cols="30" rows="10" placeholder="Введите текст"></textarea>
