--- a/src/views/pages/vendors.j2
+++ b/src/views/pages/vendors.j2
@@ -112,16 +112,19 @@
       </div>
     </section>
 
+    {% include "./blocks/need-help.j2" %}
     {% include "./blocks/our-advantages.j2" %}
+    {% include "./blocks/subscribe-section.j2" %}
 
   </main>
 {% endblock content %}
 
 {% block modal %}
-  {% include "./blocks/modal-image.j2" %}
+
 {% endblock %}
 
 {% block js %}
-  <script src="./js/modal-image.min.js"></script>
+  <script src="./js/need-help.min.js"></script>
+  <script src="./js/subscribe-form.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
