работаю над карточкой оборудования

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -46,4 +46,6 @@
 @import "./blocks/reviews.scss";
 @import "./blocks/vendors.scss";
 @import "./blocks/need-help.scss";
+@import "./blocks/equipment-card.scss";
+@import "./blocks/import-replacement.scss";
 
