--- a/src/scss/blocks/button.scss
+++ b/src/scss/blocks/button.scss
@@ -14,6 +14,7 @@ $button-height: 47;
   font-size: 14px;
   line-height: 17px;
   max-width: 290px;
+  text-decoration: none;
 
   transition: all 0.3s ease;
   clip-path: polygon(0 0, calc(100% - 15px) 0, 100% 50%, calc(100% - 15px) 100%, 0 100%);
