--- a/src/views/pages/import-replacement.j2
+++ b/src/views/pages/import-replacement.j2
@@ -37,7 +37,75 @@
                   </ul>
                   <a class="equipment-card__button button" href="./catalog.html">Перейти в раздел</a>
                 </div>
-                <img class="equipment-card__image" src="@img/equipment-card-computers.png" alt="" style="top: 20px; right: -10px">
+                <img class="equipment-card__image equipment-card__image--computers" src="@img/equipment-card-computers.png" alt="">
+              </div>
+            </li>
+            <li class="import-replacement__item">
+              <div class="equipment-card">
+                <div class="equipment-card__content">
+                  <a class="equipment-card__title" href="./catalog.html">Серверы и системы хранения данных</a>
+                  <ul class="equipment-card__vendors">
+                    <li class="equipment-card__vendor">
+                      <a class="equipment-card__vendor-link" href="./vendor-page.html">ExaPower</a>
+                    </li>
+                    <li class="equipment-card__vendor">
+                      <a class="equipment-card__vendor-link" href="./vendor-page.html">iRU</a>
+                    </li>
+                    <li class="equipment-card__vendor">
+                      <a class="equipment-card__vendor-link" href="./vendor-page.html">YADRO</a>
+                    </li>
+                    <li class="equipment-card__vendor">
+                      <a class="equipment-card__vendor-link" href="./vendor-page.html">UTINET</a>
+                    </li>
+                  </ul>
+                  <a class="equipment-card__button button" href="./catalog.html">Перейти в раздел</a>
+                </div>
+                <img class="equipment-card__image equipment-card__image--servers" src="@img/equipment-card-servers.png" alt="">
+              </div>
+            </li>
+            <li class="import-replacement__item">
+              <div class="equipment-card">
+                <div class="equipment-card__content">
+                  <a class="equipment-card__title" href="./catalog.html">Сетевое оборудование</a>
+                  <ul class="equipment-card__vendors">
+                    <li class="equipment-card__vendor">
+                      <a class="equipment-card__vendor-link" href="./vendor-page.html">Т-ком</a>
+                    </li>
+                    <li class="equipment-card__vendor">
+                      <a class="equipment-card__vendor-link" href="./vendor-page.html">Элтекс</a>
+                    </li>
+                  </ul>
+                  <a class="equipment-card__button button" href="./catalog.html">Перейти в раздел</a>
+                </div>
+                <img class="equipment-card__image equipment-card__image--network" src="@img/equipment-card-network.png" alt="">
+              </div>
+            </li>
+            <li class="import-replacement__item">
+              <div class="equipment-card">
+                <div class="equipment-card__content">
+                  <a class="equipment-card__title" href="./catalog.html">Источники бесперебойного питания</a>
+                  <ul class="equipment-card__vendors">
+                    <li class="equipment-card__vendor">
+                      <a class="equipment-card__vendor-link" href="./vendor-page.html">АО Связьинжиниринг</a>
+                    </li>
+                  </ul>
+                  <a class="equipment-card__button button" href="./catalog.html">Перейти в раздел</a>
+                </div>
+                <img class="equipment-card__image equipment-card__image--ups" src="@img/equipment-card-ups.png" alt="">
+              </div>
+            </li>
+            <li class="import-replacement__item">
+              <div class="equipment-card">
+                <div class="equipment-card__content">
+                  <a class="equipment-card__title" href="./catalog.html">Интерактивное оборудование</a>
+                  <ul class="equipment-card__vendors">
+                    <li class="equipment-card__vendor">
+                      <a class="equipment-card__vendor-link" href="./vendor-page.html">NexTouch</a>
+                    </li>
+                  </ul>
+                  <a class="equipment-card__button button" href="./catalog.html">Перейти в раздел</a>
+                </div>
+                <img class="equipment-card__image equipment-card__image--interactive" src="@img/equipment-card-interactive.png" alt="">
               </div>
             </li>
           </ul>
