--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -48,4 +48,5 @@
 @import "./blocks/need-help.scss";
 @import "./blocks/equipment-card.scss";
 @import "./blocks/import-replacement.scss";
+@import "./blocks/import-features.scss";
 
