--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,4 +49,7 @@
 @import "./blocks/equipment-card.scss";
 @import "./blocks/import-replacement.scss";
 @import "./blocks/import-features.scss";
+@import "./blocks/filter.scss";
+@import "./blocks/product-card.scss";
+@import "./blocks/catalog.scss";
 
