--- a/src/scss/blocks/our-advantages.scss
+++ b/src/scss/blocks/our-advantages.scss
@@ -1,4 +1,5 @@
 .our-advantages {
+  padding-top: 40px;
   padding-bottom: 170px;
   background-image: url("@img/our-adv-bg-mobile.png");
   background-repeat: no-repeat;
@@ -10,6 +11,7 @@
   }
 
   @media (min-width: $desktop-width) {
+    padding-top: 80px;
     padding-bottom: 55px;
     background-image: url("@img/our-adv-bg.png");
     background-position: calc(50% + 440px) calc(100% + 18px);
@@ -32,17 +34,6 @@
 
   @media (min-width: $desktop-width) {
     font-size: 32px;
-  }
-}
-.our-advantages__we {
-  font-family: "Jost", "Arial", sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 19px;
-  margin-bottom: 30px;
-
-  @media (max-width: $max-mobile-width) {
-    display: none;
   }
 }
 .our-advantages__main {
