поправил типы кнопок в формах

--- a/src/views/blocks/modal.j2
+++ b/src/views/blocks/modal.j2
@@ -31,7 +31,7 @@
           <span class="modal__label-text form__label-text">Опишите Вашу задачу</span>
           <textarea class="modal__form-textarea form__field" name="modal-task" id="modal-task" cols="30" rows="10" placeholder="Введите текст"></textarea>
         </label>
-        <button class="button form__submit-button">Получить консультацию</button>
+        <button class="button form__submit-button" type="submit">Получить консультацию</button>
       </form>
     </div>
     <button class="modal__close-button" type="button">
