--- a/src/views/blocks/need-help.j2
+++ b/src/views/blocks/need-help.j2
@@ -32,7 +32,7 @@
             <span class="need-help__label-text form__label-text">Опишите Вашу задачу</span>
             <textarea class="form__field--textarea form__field" name="need-help-task" id="need-help-task" cols="30" rows="10" placeholder="Введите текст"></textarea>
           </label>
-          <button class="button form__submit-button">Получить консультацию</button>
+          <button class="button form__submit-button" type="submit">Получить консультацию</button>
         </form>
       </div>
     </div>
