--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 
 @import "./blocks/visually-hidden.scss";
 @import "./blocks/container.scss";
+@import "./blocks/tabs.scss";
 @import "./blocks/button.scss";
 @import "./blocks/title.scss";
 @import "./blocks/breadcumbs.scss";
@@ -52,4 +53,5 @@
 @import "./blocks/filter.scss";
 @import "./blocks/product-card.scss";
 @import "./blocks/catalog.scss";
+@import "./blocks/product-page.scss";
 
